install(FILES
    Map01_siri.jpg
    Map03_douF.jpg
    Map03_douR.jpg
    Map05_atamaF.jpg
    Map05_atamaR.jpg
    Map06_migikata.jpg
    Map07_migijowan.jpg
    Map08_migikawan.jpg
    Map09_migitekubi.jpg
    Map10_migitenohira.jpg
    Map12_migiisshisaki.jpg
    Map14_miginishisaki.jpg
    Map28_migimata.jpg
    Map29_migidaitai.jpg
    Map30_migisune.jpg
    Map31_migiashikubi.jpg
    Map32_migiashi.jpg
    chest.wrl
    head.wrl
    lankle.wrl
    lfoot.wrl
    lhip.wrl
    llarm.wrl
    llindex.wrl
    lllittle.wrl
    llthumb.wrl
    lpalm.wrl
    lshank.wrl
    lshoulder.wrl
    lthigh.wrl
    luarm.wrl
    luindex.wrl
    lulittle.wrl
    luthumb.wrl
    lwrist.wrl
    main.wrl
    neck.wrl
    pelvis.wrl
    rankle.wrl
    rfoot.wrl
    rhip.wrl
    rlarm.wrl
    rlindex.wrl
    rllittle.wrl
    rlthumb.wrl
    rpalm.wrl
    rshank.wrl
    rshoulder.wrl
    rthigh.wrl
    ruarm.wrl
    ruindex.wrl
    rulittle.wrl
    ruthumb.wrl
    rwrist.wrl
    waist.wrl
    DESTINATION "${OPENHRP3_1_PREFIX}/share/OpenHRP-3.1/robot/JVRC1")
